<resources>
    <string name="app_name">Taxi-Meter</string>

    <string name="activity_label_meter">Meter Activity</string>

    <string name="btn_home_openmeter">Open Meter</string>
    <string name="btn_meter_premium_night_off">Night Prm OFF</string>
    <string name="btn_meter_premium_night_on">Night Prm ON</string>
    <string name="btn_meter_premium_outcity_off">Outcity Prm OFF</string>
    <string name="btn_meter_premium_outcity_on">Outcity Prmm ON</string>
    <string name="btn_meter_start">Start Driving</string>
    <string name="btn_meter_stop">Stop Driving</string>

    <string name="dialog_custom_title">Custom Cost</string>
    <string name="dialog_custom_btn_ok">Done</string>
    <string name="dialog_custom_btn_cancel">Cancel</string>
    <string name="dialog_custom_hint_base">Base Cost</string>
    <string name="dialog_custom_hint_base_distance">Distance for Base Cost (Meter)</string>
    <string name="dialog_custom_hint_cost_per_distance">Distance Cost per (Meter)</string>
    <string name="dialog_custom_hint_cost_per_time">Time Cost per (Seconds)</string>
    <string name="dialog_custom_hint_premium_outcity">Outcity Premium Percentage</string>
    <string name="dialog_custom_hint_premium_night">Night Premium Percentage</string>
    <string name="dialog_custom_hint_premium_night_start">Night Premium Start Hour (24-Format)</string>
    <string name="dialog_custom_hint_premium_night_end">Night Premium End Hour (24-Format)</string>

    <string name="firebase_toast_fail">Failed to get Cost DB Version</string>
    <string name="firebase_toast_update">Updated Cost DB to Latest</string>

    <string name="fragment_label_donate">Donate Fragment</string>
    <string name="fragment_label_home">Home Fragment</string>
    <string name="fragment_label_setting">Setting Fragment</string>

    <string name="iv_desc_meter_runner">Meter Runner</string>
    <string name="iv_desc_welcome_permission_taxi">Taxi Meter</string>

    <string name="menu_main_donate">Donate</string>
    <string name="menu_main_home">Home</string>
    <string name="menu_main_setting">Setting</string>

    <string name="noti_alert_close">Close</string>
    <string name="noti_alert_message">Cost : %,d Won\nDriven Distance : %.1fkm</string>
    <string name="noti_alert_title">Drive Finished</string>
    <string name="noti_channel_description">Notification when Meter Service is Running</string>
    <string name="noti_channel_id">DEFAULT_NOTI</string>
    <string name="noti_channel_title">Running Notification</string>
    <string name="noti_service_content">Cost : %,d Won / Current Speed : %.1fkm/h / Driven Distance : %.1fkm</string>
    <string name="noti_service_title">Taxi Meter is Running</string>
    <string name="noti_toast_custom_cost_error">Input Value has Error or too Large</string>
    <string name="noti_toast_night_prm_info">Night Premium will be applied only at certain time.</string>
    <string name="noti_toast_no_permission">Location Permission is not Granted. Please Grant for Meter.</string>
    <string name="noti_toast_no_notification">Without Notification, Background Runtime might be unstable.</string>
    <string name="noti_toast_purchase_adremove">Advertise Remove is Applied</string>
    <string name="noti_toast_purchase_already">Already Owned Item!</string>
    <string name="noti_toast_purchase_canceled">Canceled Purchase</string>
    <string name="noti_toast_purchase_error">Error %d : %s</string>
    <string name="noti_toast_purchase_success">Successfully Purchased. Thanks!</string>

    <string name="pref_category_dev_info">Developer Info</string>
    <string name="pref_category_meter">Meter Setup</string>
    <string name="pref_category_meter_info">Meter Info</string>
    <string name="pref_summary_cost_1">Base Cost : %,d Won (First %.1fkm)\n100 Won per %dm\n100 Won per %dsecs\nOuter City Premium %d%%\nNight Premium\n - %d%% when %d:00 ~ %d:00\n - %d%% when %d:00 ~ %d:00</string>
    <string name="pref_summary_cost_2">Base Cost : %,d Won (First %.1fkm)\n100 Won per %dm\n100 Won per %dsecs\nOuter City Premium %d%%\nNight Premium %d%% when %d:00 ~ %d:00</string>
    <string name="pref_summary_developer">CAU CSE 2019</string>
    <string name="pref_summary_developer_blog">https://dev-lr.com</string>
    <string name="pref_summary_developer_github">https://github.com/yymin1022</string>
    <string name="pref_summary_developer_instagram">https://instagram.com/useful_min</string>
    <string name="pref_summary_privacy_policy">https://defcon.or.kr/privacy</string>
    <string name="pref_title_developer">Dev. LR</string>
    <string name="pref_title_developer_blog">Developer Blog</string>
    <string name="pref_title_developer_github">Developer GitHub</string>
    <string name="pref_title_developer_instagram">Developer Instagram</string>
    <string name="pref_title_cost">Cost Info</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_title_theme">Meter Theme</string>
    <string name="pref_title_version">Cost DB Version</string>

    <string name="location_busan">Busan</string>
    <string name="location_chungbuk">Chungbuk</string>
    <string name="location_chungnam">Chungnam</string>
    <string name="location_custom">Custom</string>
    <string name="location_daegu">Daegu</string>
    <string name="location_daejeon">Daejeon</string>
    <string name="location_gangwon">Gangwon</string>
    <string name="location_gwangju">Gwangju</string>
    <string name="location_gyeongbuk">Gyeongbuk</string>
    <string name="location_gyeonggi">Gyeonggi</string>
    <string name="location_gyeongnam">Gyeongnam</string>
    <string name="location_incheon">Incheon</string>
    <string name="location_jeju">Jeju</string>
    <string name="location_jeonbuk">Jeonbuk</string>
    <string name="location_jeonnam">Jeonnam</string>
    <string name="location_ulsan">Ulsan</string>
    <string name="location_seoul">Seoul</string>

    <string name="theme_circle">Circle Type</string>
    <string name="theme_horse">Horse Type</string>

    <string name="tv_donate_adremove">AD Remove</string>
    <string name="tv_donate_bigmac">$10 BigMac</string>
    <string name="tv_donate_coffee">$5 Starbucks</string>
    <string name="tv_donate_coke">$1 Coke</string>
    <string name="tv_donate_dinner">$50 Dinner Course</string>
    <string name="tv_donate_money">Paypal</string>
    <string name="tv_home_info">Touch to Start</string>
    <string name="tv_home_title_meter">Meter</string>
    <string name="tv_home_title_taxi">Taxi</string>
    <string name="tv_meter_info_cost">%,d Won</string>
    <string name="tv_meter_info_cost_type_base">Cost Type\nBase Cost</string>
    <string name="tv_meter_info_cost_type_distance">Cost Type\nPer Distance</string>
    <string name="tv_meter_info_cost_type_time">Cost Type\nPer Time</string>
    <string name="tv_meter_info_distance">Drove Distance\n%.1fkm</string>
    <string name="tv_meter_info_premium_night">Night Premium Enabled</string>
    <string name="tv_meter_info_premium_outcity">Outcity Premium Enabled</string>
    <string name="tv_meter_info_counter">%d</string>
    <string name="tv_meter_info_speed">Current Speed\n%.1fkm/h</string>
    <string name="tv_meter_info_status_driving">Status\nDriving</string>
    <string name="tv_meter_info_status_not_driving">Status\nNot Driving</string>
    <string name="tv_meter_info_status_gps_unstable">Status\nGPS is Unstable</string>
    <string name="tv_welcome_location_info">You can change it later from App Setting</string>
    <string name="tv_welcome_location_next">Next</string>
    <string name="tv_welcome_location_title">Select Location for Meter Cost</string>
    <string name="tv_welcome_location_warning">!! Warning !!\nReceiving money using this application may be punished under the laws of the Republic of Korea.</string>
    <string name="tv_welcome_permission_grant_location">Grant Location Permission</string>
    <string name="tv_welcome_permission_grant_notification">Grant Notification Permission</string>
    <string name="tv_welcome_permission_info">You need to grant Location and Notification Permission for Meter Feature.\nWithout it, GPS will not work or Background Service will be unstable.</string>
    <string name="tv_welcome_permission_next">Next</string>
</resources>