<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_base"
        android:inputType="number"
        android:id="@+id/input_custom_dialog_base" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_base_distance"
        android:inputType="number"
        android:id="@+id/input_custom_dialog_base_distance" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_cost_per_distance"
        android:inputType="number"
        android:id="@+id/input_custom_dialog_distance" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_cost_per_time"
        android:inputType="number"
        android:id="@+id/input_custom_dialog_time" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_premium_outcity"
        android:inputType="number"
        android:id="@+id/input_custom_dialog_premium_outcity" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_premium_night"
        android:inputType="number"
        android:id="@+id/input_custom_dialog_premium_night" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_premium_night_start"
        android:inputType="time"
        android:id="@+id/input_custom_dialog_premium_night_start" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_custom_hint_premium_night_end"
        android:inputType="time"
        android:id="@+id/input_custom_dialog_premium_night_end" />

</LinearLayout>