<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelcomeLocationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_welcome_location_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_welcome_location_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_welcome_location_info"
        android:textAlignment="center"
        android:textSize="15sp"
        android:id="@+id/tv_welcome_location_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_location_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/layout_welcome_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_location_title"
        app:layout_constraintBottom_toTopOf="@id/tv_welcome_location_warning">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:id="@+id/radio_welcome_location_1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_seoul"
                android:id="@+id/radio_location_seoul" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_gangwon"
                android:id="@+id/radio_location_gangwon" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_gyeonggi"
                android:id="@+id/radio_location_gyeonggi" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_gyeongbuk"
                android:id="@+id/radio_location_gyeongbuk" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_gyeongnam"
                android:id="@+id/radio_location_gyeongnam" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_gwangju"
                android:id="@+id/radio_location_gwangju" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_daegu"
                android:id="@+id/radio_location_daegu" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_daejeon"
                android:id="@+id/radio_location_daejeon" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:id="@+id/radio_welcome_location_2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_busan"
                android:id="@+id/radio_location_busan" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_ulsan"
                android:id="@+id/radio_location_ulsan" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_incheon"
                android:id="@+id/radio_location_incheon" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_jeonbuk"
                android:id="@+id/radio_location_jeonbuk" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_jeonnam"
                android:id="@+id/radio_location_jeonnam" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_jeju"
                android:id="@+id/radio_location_jeju" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_chungbuk"
                android:id="@+id/radio_location_chungbuk" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_chungnam"
                android:id="@+id/radio_location_chungnam" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tv_welcome_location_warning"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_welcome_location_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_welcome_location"
        app:layout_constraintBottom_toTopOf="@id/tv_welcome_location_next"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_welcome_location_next"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_welcome_location_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>