<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yong.taximeter.activity.MainActivity">

    <item
        android:icon="@drawable/ic_nav_settings"
        android:id="@+id/menu_main_setting"
        android:orderInCategory="100"
        android:title="@string/menu_main_setting"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_nav_home"
        android:id="@+id/menu_main_home"
        android:orderInCategory="100"
        android:title="@string/menu_main_home"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_nav_donate"
        android:id="@+id/menu_main_donate"
        android:orderInCategory="100"
        android:title="@string/menu_main_donate"
        app:showAsAction="never" />

</menu>