<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".fragment.WelcomePermissonFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_permission_info"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_welcome_permission_info"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_permission_grant_location"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_welcome_permission_grant_location"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_permission_grant_notification"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_welcome_permission_grant_notification"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_permission_grant_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>